--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -98,11 +98,12 @@ a:focus {
   vertical-align: middle;
   background-color: #fff;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s; }
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  }
 
 .ginput_container input:-moz-placeholder, .ginput_container select:-moz-placeholder, .ginput_container textarea:-moz-placeholder {
   color: #999; }
@@ -208,6 +209,11 @@ textarea.ginput_container input, textarea.ginput_container select, textarea.ginp
 .form {
   background: black;
   padding: 0.4em;
+}
+
+.module.module-artists .form {
+  padding: 1.5em;
+  color: white;
 }
 
 .form:after {
@@ -1622,6 +1628,8 @@ body { font-family: sans-serif; }
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   padding: 0.5em 1em;
+  height: auto;
+  display: block;
 }
 .gallery-nav {margin-top:10px;}
 .gallery-nav .gallery-cell:before {
@@ -1629,8 +1637,8 @@ body { font-family: sans-serif; }
   line-height: 80px;
 }
 
-.gallery-nav .gallery-cell.is-nav-selected {
-}
+.gallery-nav .gallery-cell.is-nav-selected {opacity: 0.75;}
+.gallery-nav .gallery-cell:hover {opacity: 0.75;cursor: pointer;}
 
 .gallery-cell {
   width: 100%;
@@ -1719,28 +1727,27 @@ font-weight: 500;
 text-decoration: underline;
 }
 
-
+.module.module-hero figcaption,
 .gallery-main figcaption {
   position:absolute;
   top: 25%;
   right:0;
   padding-right: 10%;
 }
-
+.module.module-hero figcaption span,
 .gallery-main figcaption span {
   color:white;
   display: block;
   text-align: right;
 }  
-
+.module.module-hero figcaption .artist,
 .gallery-main figcaption .artist {
   font-size: 5em;
   line-height: 1em;
 }
-
+.module.module-hero figcaption .categories,
 .gallery-main figcaption .categories {
   font-size: 2em;
-  margin-bottom: 0.75em;
 }  
 
 .gallery-main figcaption .btn {
@@ -1767,6 +1774,7 @@ text-decoration: underline;
   background-size:cover;
   background-repeat: no-repeat;
   background-position: center center;
+  position: relative;
 }
 
 .module.module-404 {
@@ -1803,4 +1811,10 @@ footer a {
   margin-top: 0.75em;
   color:black;
   text-decoration: underline;
+}
+
+
+aside .portrait,
+aside .embed-responsive {
+  margin-bottom:1em;
 }
