--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1785,9 +1785,10 @@ text-decoration: underline;
 }  
 
 .module.module-hero.dark figcaption span{
-  color:black!important;
+  color: #393939!important;
   display: block;
   text-align: right;
+  text-shadow: 0px 0px 1px white;
 }  
 
 .module.module-hero figcaption .artist,
