--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1981,6 +1981,9 @@ color: #E1CB94;
 
 .module.module-related {
   border-top: 1px solid #EFEFEF;
+  background: #efefef;
+  padding-bottom: 2.5em;
+  padding-top: 1.75em;
 }
 
 .content_toggle {
