--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,7 +115,7 @@ a:focus {
   color: #555;
   vertical-align: middle;
   background-color: #fff;
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
