--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2029,3 +2029,15 @@ padding-top: 3em;
 .module.module-artists article.main {
   padding: 0 2.5em;
 }
+
+.contact-icon {
+
+}
+
+.contact-icon i {
+  
+}
+
+.contact-icon:hover {
+  
+}
