--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-    color: #D2B261;
+    color: #E1CB94;
     text-decoration: none;
 }
 
@@ -2032,10 +2032,34 @@ padding-top: 3em;
 
 .contact-icon {
 
+text-align: center;
+
+display: block;
+
+font-size: 1.5em;
+
+margin-bottom: 0.5em;
+
+font-weight: bold;
 }
 
 .contact-icon i {
   
+background: #E1CB94;
+  
+border-radius: 10em;
+  
+padding: 0.8em 0.35em 0.73em 0.35em;
+  
+color: black;
+  
+font-size: 1em;
+  
+margin: 0 0.25em 0 0.25em;
+  
+line-height: 0;
+  
+display: inline-block;
 }
 
 .contact-icon:hover {
