--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2078,4 +2078,12 @@ display: inline-block;
     margin-top: 0.5em;
     color: rgba(255, 255, 255, 0.65);
 }
+
+
+.table {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 0;
 }
+
+.lead.more {margin-top:1em;}
