--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2086,9 +2086,12 @@ display: inline-block;
     margin-bottom: 0;
 }
 
-.lead.more {margin-top:1em;}
+.lead.more {margin-top:1em;color: black;text-align: center;     padding: 0.89em;     border: 1px solid #efefef;     cursor: pointer;     color: black;     margin-top: 0.5em;     margin-bottom: 0.5em;     background: #FCFCFC;     display: block;font-size: 1em;}
 
-.single-calendar {}
+.single-calendar {
+    border-top: 1px solid #EFEFEF;
+}
 .single-calendar h2 {
 
+text-align: left!important;
 }
