--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1660,6 +1660,7 @@ body { font-family: sans-serif; }
   padding: 0.5em 1em;
   height: auto;
   display: block;
+  text-align: right;
 }
 .gallery-nav {margin-top:10px;}
 .gallery-nav .gallery-cell:before {
