--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1996,7 +1996,9 @@ padding-bottom: 3em;
   
 padding-top: 3em;
 }
-
+.content_toggle::before {
+  
+}
 .content_toggle {
   text-align: center;
   padding: 0.89em;
