--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -1947,9 +1947,10 @@ color: #E1CB94;
 }
 
 .module.module-process li span {
-  padding: 1.5em 1em 1.5em 5em;
+  padding: 1.5em 2em 1.5em 5em;
   display: block;
   margin-top: 0.75em;
+  font-size: 1.1em;
 }
 
 
