--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -2144,6 +2144,7 @@ color: black;
     margin: 0 auto;
     border-radius: 10em;
     margin-bottom: 2em;
+    max-width: 189px;
 }
 .module.module-about h2 {
     text-align: center;
