--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -62,6 +62,8 @@ h6 {
 
 input {
   font-size: 1.6rem;
+  border-radius: 0!important;
+  border: none!important;
 }
 
 input[type="search"]::-ms-clear {
