--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -419,12 +419,6 @@ table img {
 
 .module.module-related .gallery-cell {
   width: 16.5%;
-  -webkit-filter: grayscale(100%);
-  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /></filter></svg>#filter');
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-  -webkit-filter: gray;
-  filter: gray;
   padding: 0.5em 1em;
   height: auto;
   display: block;
@@ -633,9 +627,9 @@ article.item a:hover .thumbnail {
 }
 
 .module-related .thumbnail {
-  -webkit-filter: grayscale(0);
-  -webkit-filter: none;
-  filter: none; 
+  -webkit-filter: none!important;
+  -webkit-filter: none!important;
+  filter: none!important;
 }
 
 .client {
