--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -999,3 +999,6 @@ article.item a {
 .artist_show .pretitle {display: block;text-transform: uppercase;font-size: 1em;color: #000000;}
 
 .artist_show .title {font-weight: bold;font-size: 1.45em;display: block;margin-top: 0.25em;margin-bottom: 0.4em;}
+
+
+.menu-icon {}
