--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -428,9 +428,7 @@ table img {
 }
 
 .gallery-nav .gallery-cell {
-  width: 12%;
-  -webkit-filter: grayscale(100%);
-  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /></filter></svg>#filter');
+  width: 35%;
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   -webkit-filter: gray;
@@ -439,6 +437,27 @@ table img {
   height: auto;
   display: block;
   text-align: right;
+}
+
+@media (min-width: 450px) {
+  .gallery-nav .gallery-cell {width: 25%;} 
+}
+
+@media (min-width: 700px) {
+  .gallery-nav .gallery-cell {width: 20%;} 
+}
+
+@media (min-width: 850px) {
+  .gallery-nav .gallery-cell {width: 15%;} 
+}
+@media (min-width: 1200px) {
+  .gallery-nav .gallery-cell {width: 12%;} 
+}
+
+.gallery-nav .gallery-cell figcaption {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .gallery-nav {
@@ -482,7 +501,7 @@ table img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-}
+} 
 
 .gallery-main .gallery-cell-image.lazyload {
   display: block;
