--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -6,8 +6,13 @@ body {
   background: #393939;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
-  padding-top: 118px;
+  padding-top: 0px;
 }
+
+@media (min-width: 1170px) {
+  body {padding-top: 118px;}}
+}
+
 
 *,
 *:after,
@@ -536,7 +541,15 @@ table img {
   right: 0;
   margin: 0 auto;
   z-index: 3;
+  display:none;
 }
+
+@media (min-width: 1170px) {
+  .module.module-subnav {
+    display:block;
+  }
+}
+
 
 .module.module-subnav form input {
   background: transparent;
