--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -1041,8 +1041,14 @@ article.item a {
 
 
 .menu-icon {
+    display:none;
     padding: 0!important;
 }
+@media (min-width: 1170px) {
+  .menu-icon {display:block;}
+}
+
+
 
 
 .clients{}
