--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -1045,7 +1045,9 @@ article.item a {
     padding: 0!important;
 }
 @media (min-width: 1170px) {
-  .menu-icon {display: block!important;}
+  .menu-icon {
+    display: block!important;
+  }
 }
 
 
