--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -615,12 +615,41 @@ table img {
 
 .gallery-main figure {
   display:block;
-  padding-bottom: 30%;
+  padding-bottom: 80%;
   background-size:cover;
-  background-position: center center;
+  background-position-x: 35%;
   background-repeat; no-repeat;
 }
 
+@media (min-width: 500px) {
+.gallery-main figure {
+  display:block;
+  padding-bottom: 50%;
+  background-size:cover;
+  background-position-x: 35%;
+  background-repeat; no-repeat;
+}
+}
+
+@media (min-width: 750px) {
+.gallery-main figure {
+  display:block;
+  padding-bottom: 40%;
+  background-size:cover;
+  background-position-x: 35%;
+  background-repeat; no-repeat;
+}
+}
+
+@media (min-width: 1100px) {
+.gallery-main figure {
+  display:block;
+  padding-bottom: 30%;
+  background-size:cover;
+  background-position-x: 35%;
+  background-repeat; no-repeat;
+}
+}
 .module.module-hero figcaption,
 .gallery-main figcaption {
   position: absolute;
