--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -1267,3 +1267,6 @@ article.item a {
     display: block;
     margin: 0 auto 0 auto;
 }
+
+.teammember {text-align:center;margin-bottom:2em;}
+.teammember img {max-width:120px;margin:0 auto;}
