--- a/assets/css/tajmer.css
+++ b/assets/css/tajmer.css
@@ -1270,3 +1270,6 @@ article.item a {
 
 .teammember {text-align:center;margin-bottom:2em;}
 .teammember img {max-width:120px;margin:0 auto;}
+
+
+.module-standard iframe {width:100%; border:none;}
